RET-4158: Add Region, Location and Case Management Category to Config