@@ -61,8 +61,17 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
         claimant.put("claimant_first_names", "George");
         claimant.put("claimant_last_name", "Jetson");
 
+        Map<String, Object> caseManagementCategory = new HashMap<>();
+        caseManagementCategory.put("selectedLabel", "Employment");
+
+        Map<String, Object> caseManagementLocation = new HashMap<>();
+        caseManagementLocation.put("region", "11");
+        caseManagementLocation.put("baseLocation", "366559");
+
         Map<String, Object> caseData = new HashMap<>();
         caseData.put("claimantIndType", claimant);
+        caseData.put("caseManagementCategory", caseManagementCategory);
+        caseData.put("caseManagementLocation", caseManagementLocation);
 
         return caseData;
     }
@@ -90,7 +99,7 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
                 .getResultList()
                 .stream()
                 .filter((r) -> r.containsValue("caseName"))
-                .collect(Collectors.toList());
+                .toList();
 
         // Then
         assertEquals(expectedCaseName, resultList.get(0).get("value"));
@@ -140,7 +149,7 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
                 .getResultList()
                 .stream()
                 .filter((r) -> r.containsValue("workType"))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(expected.get(0).get("name"), resultList.get(0).get("name"));
         assertEquals(expected.get(0).get("value"), resultList.get(0).get("value"));
@@ -220,7 +229,7 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
                 .getResultList()
                 .stream()
                 .filter((r) -> r.containsValue("roleCategory"))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(expected.get(0).get("name"), resultList.get(0).get("name"));
         assertEquals(expected.get(0).get("value"), resultList.get(0).get("value"));
@@ -305,7 +314,7 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
                 .getResultList()
                 .stream()
                 .filter((r) -> r.containsValue("description"))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(expected.get(0).get("name"), resultList.get(0).get("name"));
         assertEquals(expected.get(0).get("value")
@@ -483,7 +492,7 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
                 .getResultList()
                 .stream()
                 .filter((r) -> r.containsValue("additionalProperties_roleAssignmentId"))
-                .collect(Collectors.toList());
+                .toList();
 
         assertTrue(resultList.contains(Map.of(
             "name", "additionalProperties_roleAssignmentId",
@@ -517,7 +526,7 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
                 .getResultList()
                 .stream()
                 .filter((r) -> r.containsValue("dueDateIntervalDays"))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(expectedIntervalDays.get(0).get("name"), intervalDaysResultList.get(0).get("name"));
         assertEquals(expectedIntervalDays.get(0).get("value"), intervalDaysResultList.get(0).get("value"));
@@ -527,7 +536,7 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
                 .getResultList()
                 .stream()
                 .filter((r) -> r.containsValue("majorPriority"))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(expectedMajor.get(0).get("name"), majorPriorityResultList.get(0).get("name"));
         assertEquals(expectedMajor.get(0).get("value"), majorPriorityResultList.get(0).get("value"));
@@ -537,7 +546,7 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
                 .getResultList()
                 .stream()
                 .filter((r) -> r.containsValue("minorPriority"))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(expectedMinor.get(0).get("name"), minorPriorityResultList.get(0).get("name"));
         assertEquals(expectedMinor.get(0).get("value"), minorPriorityResultList.get(0).get("value"));
@@ -664,20 +673,20 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
         DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
 
         List<Map<String, Object>> resultList =
-            dmnDecisionTableResult.getResultList().stream().collect(Collectors.toList());
-        assertEquals(10, resultList.size());
+            dmnDecisionTableResult.getResultList().stream().toList();
+        assertEquals(12, resultList.size());
 
         assertEquals(Map.of(
             "name", "calculatedDates",
             "value", "nextHearingDate,dueDate,priorityDate",
             "canReconfigure", true
-        ), resultList.get(2));
+        ), resultList.get(4));
 
         assertEquals(Map.of(
             "name", "dueDateTime",
             "value", "16:00",
             "canReconfigure", true
-        ), resultList.get(4));
+        ), resultList.get(6));
 
         assertEquals(Map.of(
             "name", "dueDateNonWorkingCalendar",
@@ -685,31 +694,31 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
                 + "https://raw.githubusercontent.com/hmcts/civil-wa-task-configuration/"
                 + "master/src/main/resources/privilege-calendar.json",
             "canReconfigure", true
-        ), resultList.get(5));
+        ), resultList.get(7));
 
         assertEquals(Map.of(
             "name", "dueDateNonWorkingDaysOfWeek",
             "value", "SATURDAY,SUNDAY",
             "canReconfigure", true
-        ), resultList.get(6));
+        ), resultList.get(8));
 
         assertEquals(Map.of(
             "name", "dueDateSkipNonWorkingDays",
             "value", "true",
             "canReconfigure", true
-        ), resultList.get(7));
+        ), resultList.get(9));
 
         assertEquals(Map.of(
             "name", "dueDateMustBeWorkingDay",
             "value", "Yes",
             "canReconfigure", true
-        ), resultList.get(8));
+        ), resultList.get(10));
 
         assertEquals(Map.of(
             "name", "priorityDateOriginRef",
             "value", "dueDate",
             "canReconfigure", true
-        ), resultList.get(9));
+        ), resultList.get(11));
     }
 
     @Test
@@ -746,7 +755,7 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
         //The purpose of this test is to prevent adding new rows without being tested
         DmnDecisionTableImpl logic = (DmnDecisionTableImpl) decision.getDecisionLogic();
 
-        assertThat(logic.getRules().size(), is(51));
+        assertThat(logic.getRules().size(), is(53));
     }
 
     private static Map<String, Object> mapData(String source) {
@@ -781,6 +790,8 @@ class EmploymentTaskConfigurationTestScot extends DmnDecisionTableBaseUnitTest {
     private List<Map<String, Object>> getExpectedValues() {
         List<Map<String, Object>> rules = new ArrayList<>();
         getExpectedValue(rules, "caseName", "George Jetson");
+        getExpectedValue(rules, "region", "11");
+        getExpectedValue(rules, "location", "366559");
         getExpectedValue(rules, "caseManagementCategory", "Employment");
         getExpectedValue(rules, "calculatedDates", "nextHearingDate,dueDate,priorityDate");
         getExpectedValue(rules, "dueDateOrigin", null);
